<resources>
    <string name="app_home_name">HOME</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="check_pnr_hint">Enter PNR number</string>
    <string name="chech_pnr">Check PNR</string>
    <string name="upcomming_button">Upcoming</string>
    <string name="completed_button">Complete</string>
    <string name="others_button">Others</string>
    <string name="read_irctc_msg">Read IRCTC Msg</string>
    <string name="title_pnr">PNR</string>
    <string name="sync_pnr">Sync PNR</string>
    <string name="search_pnr_status">Search PNR Status</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="getting_trips">Getting Trips \n Please Wait...</string>
    <string name="save">Save</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="net_amount">Net Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="temp_date">25th Jun</string>
    <string name="select_quote">Select Quote</string>
    <string name="include_trains_txt">Include Weekly Trains</string>
    <string name="find_trains">Find Trains</string>
    <string name="what_ever_you_need">What ever you need for indian rail we have it</string>
    <string name="search_stations">Search Stations</string>
    <string name="recent_searched">Recent Searched</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="duration">DURATION</string>
    <string name="share">Share</string>
    <string name="cont_menu">Menu</string>
    <string name="history">Recent History</string>
    <string name="home_screen_name"><small>HOME</small></string>
    <string name="route_map">Map View</string>
    <string name="route_list">List View</string>
    <string name="no_upcoming_trips">No Upcoming Trips</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_pnr_dialog_text">Are you sure ? \n you want to delete</string>
    <string name="alert">Alert</string>
    <string name="delete">Delete</string>
    <string name="select_city">Select City</string>
    <string name="select_station">Select Station</string>
    <string name="via_light_text">Via (Optional)</string>
    <string name="adult_age">ADULT AGE [12 and above]</string>
    <string name="not_available">NA</string>
    <string name="enter_train_number">Enter Train Name or Number</string>
    <string name="amenities">Amenities</string>
    <string name="popular_stations">Popular Stations</string>
    <string name="recent_search">Recent Search</string>
    <string name="all_station">All Stations</string>
    <string name="train_route">Train Route</string>
    <string name="select_departure">Select Departure</string>
    <string name="select_arrival">Select Arrival</string>
    <string name="select_via">Select Via</string>
    <string name="pnr_status">PNR Status</string>
    <string name="gps_dialog_title">Please enable location</string>
    <string name="gps_dialog_msg">RailGadi shows you nearby</string>
    <string name="getting_location">Getting Location</string>
    <string name="enable_location_msg">Enable Location Provider</string>
    <string name="internet_on">Please Check your Internet settings</string>
    <string name="railway_numbers">Railway Numbers</string>
    <string-array name="railway_name">
        <item>Customer Care</item>
        <item>Coach Related</item>
        <item>RPF and Security</item>
        <item>FOOD</item>
        <item>Cleaning</item>
        <item>Enquiry</item>
        <item>Drinking Water</item>
        <item>Medical</item>
        <item>Enquiry</item>
        <item>Electric</item>
    </string-array>
    <string name="tutorial_lock">TutorialLock</string>
    <string name="db_encryption_key">BhartiyaRailBESTRAIL</string>
    <string name="rail_api_lock_key">RailGadiTheIndianRailApp</string>
    <string name="gcm_api_key">794011495542</string>
    <string name="facebook_app_id">120091548351249</string>
    <string name="timetable_pref_key">rail_gadi_timetable_preference</string>
    <string name="live_train_recent_preference">rail_gadi_live_train_recent_preference</string>
    <string name="fare_enq_history_pref_key">fare_enq_history_key_railgadi</string>
    <string name="seat_avl_history_pref_key">seat_avl_history_key_railgadi</string>
    <string name="findtrain_history_key">find_train_history_key</string>
    <string name="removable_pnr_pref_key">removable_pnr_list</string>
    <string name="my_live_journey_key">my_live_journey_key</string>
    <string name="live_train_tracking_key">live_train_tracking_key</string>
    <string name="pnr_pref_handler_key">rail_gadi_map_holder</string>
    <string name="session_pref_key">session_preference</string>
    <string name="alarm_pref_key">savedAlarmKey</string>
    <string name="alarm_pref_name">savedAlarmPrefName</string>
    <string name="google_map_key_android">AIzaSyAmGZ4rC7h8kOzOtwgTLIY19FyYOkGxTtA</string>
    <string name="rail_api_key">NOg+Z51PF/U3cnC7qpFpronDLVxUGF02tJxCEgoLzwPEcoIhmU6QRw</string>
    <string name="amenities_key">AIzaSyDo6IK_C7RJkD9QcVDHL02CalaAdrzjXNo</string>
    <string name="google_analytic_tracking_id">UA-69738694-1</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please Wait...</string>
    <string name="getting_near_by">Getting Near By...</string>
    <string name="refreshing">Refreshing...</string>
    <string name="getting_special_trains">Getting Special Trains</string>
    <string name="getting_trains">Getting Trains</string>
    <string name="verifying">Verifying...</string>
    <string-array name="nav_menu_titles">
        <item>Setting</item>
        <item>Seat Map</item>
        <item>Saved Info</item>
        <item>Rate Us</item>
        <item>Share</item>
        <item>About</item>
        <item>More Apps</item>
        <item>Quit</item>
    </string-array>
    <string-array name="quota_codes_array">
        <item>GN</item>
        <item>CK</item>
        <item>PT</item>
        <item>DF</item>
        <item>DP</item>
        <item>SS</item>
        <item>FT</item>
        <item>GNRS</item>
        <item>HO</item>
        <item>LB</item>
        <item>LD</item>
        <item>OS</item>
        <item>PH</item>
        <item>HP</item>
        <item>PQ</item>
        <item>RC(RAC)</item>
        <item>RE</item>
        <item>RS</item>
        <item>YU</item>
    </string-array>
    <string-array name="quota_names_array">
        <item>General</item>
        <item>Tatkal</item>
        <item>Premium Tatkal</item>
        <item>Defence</item>
        <item>Duty Pass</item>
        <item>Female(above 45 years)/Senior Citizon/Travelling alone</item>
        <item>Foreign Tourist</item>
        <item>General Quota Road Side</item>
        <item>Head Quarters/ High Official</item>
        <item>Lower Berth</item>
        <item>Ladies</item>
        <item>Out Station</item>
        <item>Parliament House</item>
        <item>Physically Handicapped</item>
        <item>Pooled</item>
        <item>Reservation Against Cancellation</item>
        <item>Railway Employees Staff on Duty for the train</item>
        <item>Road Side</item>
        <item>Yuva</item>
    </string-array>
    <string-array name="time_hours">
        <item>Any Time</item>
        <item>00:00 hr.</item>
        <item>01:00 hr.</item>
        <item>02:00 hr.</item>
        <item>03:00 hr.</item>
        <item>04:00 hr.</item>
        <item>05:00 hr.</item>
        <item>06:00 hr.</item>
        <item>07:00 hr.</item>
        <item>08:00 hr.</item>
        <item>09:00 hr.</item>
        <item>10:00 hr.</item>
        <item>11:00 hr.</item>
        <item>12:00 hr.</item>
        <item>13:00 hr.</item>
        <item>14:00 hr.</item>
        <item>15:00 hr.</item>
        <item>16:00 hr.</item>
        <item>17:00 hr.</item>
        <item>18:00 hr.</item>
        <item>19:00 hr.</item>
        <item>20:00 hr.</item>
        <item>21:00 hr.</item>
        <item>22:00 hr.</item>
        <item>23:00 hr.</item>
        <item>24:00 hr.</item>
    </string-array>
    <string-array name="select_age_array">
        <item>CHILD AGE [5-11]</item>
        <item>ADULT AGE [12 and above]</item>
        <item>SENIOR CITIZEN FEMALE AGE [58 and above]</item>
        <item>SENIOR CITIZEN MALE AGE [60 and above]</item>
    </string-array>
    <string name="more_info_live_journey">1. more info dummy text more info dummy text more info dummy text more info dummy text
                                            more info dummy text more info dummy text more info dummy text
                                    \n2. more info dummy text more info dummy text more info dummy text more info dummy text
                                    more info dummy text more info dummy text more info dummy text more info dummy text more info dummy text
                                    \n3. more info dummy text more info dummy text more info dummy text more info dummy text more info dummy text
                                    more info dummy text more info dummy text more info dummy text more info dummy text
                                    \n4. more info dummy text more info dummy text more info dummy text more info dummy text more info dummy text
                                    more info dummy text more info dummy text more info dummy text more info dummy text
                                    more info dummy text more info dummy text more info dummy text more info dummy text</string>
    <string name="home">Home</string>
    <string name="search_train">Search Trains</string>
    <string name="trips">PNR/Trips</string>
    <string name="irctc">IRCTC</string>
    <string name="search_pnr">Search PNR</string>
    <string name="seat_availability">Seat Availability</string>
    <string name="train_timetable">Train Timetable</string>
    <string name="fare_enquiry">Fare Enquiry</string>
    <string name="seat_map">Seat Map</string>
    <string name="live_station">Live Station</string>
    <string name="curr_book_avl">Current Booking Availability</string>
    <string name="coach_composition">Coach Composition</string>
    <string name="my_live_journey">My Live Journey</string>
    <string name="rate_us">Rate Us</string>
    <string name="station_information">Station Information</string>
    <string name="auto_login_information">AUTO LOGIN INFORMATION</string>
    <string name="irctc_user_name">IRCTC Username</string>
    <string name="irctc_password">IRCTC Password</string>
    <string name="stop_notification">Stop Notification</string>
    <string name="disclaimer">- Disclaimer -</string>
    <string name="rescheduled">RESCHEDULED</string>
    <string name="canceled">CANCELLED</string>
    <string name="diverted">DIVERTED</string>
    <string name="fully">Fully</string>
    <string name="partially">Partially</string>
    <string name="no_data_found">No Data Found</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up">Sign up</string>
    <string name="skip">SKIP</string>
    <string name="existing_user_login">Existing user? Login</string>
    <string name="distance_shown">Distance shown here are approximate</string>
    <string name="google_plus">Google Plus</string>
    <string name="continue_with_gmail">Continue with Google</string>
    <string name="by_proceeding">By proceeding you agree</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>