<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ten">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/two"
        android:text="@string/auto_login_information"
        android:textColor="@color/black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/two"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/user_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/irctc_username_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/irctc_user_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/irctc_username_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/irctc_user_name"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/twelve" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/one"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/irctc_password_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/irctc_password"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/irctc_password_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/irctc_user_name"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/twelve" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/one"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:text="@string/stop_notification"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/mute_notification_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>